Update Imageflow info

--- a/content/index.slim
+++ b/content/index.slim
@@ -13,8 +13,8 @@ h1 ASP.NET library and image server
       .row-fluid
         .span12 style="text-align:center;"
           h2 style="color:white"
-            a href="https://www.kickstarter.com/projects/njones/imageflow-respect-the-pixels-a-secure-alt-to-image" style="color:white"
-              | Pre-order Imageflow via Kickstarter and save up to 85% off until Jun 27th.
+            a href="https://www.imageflow.io/imageresizer" style="color:white"
+              | Imageflow is the technology behind ImageResizer vNext.
           
   .container
     .row-fluid
@@ -54,7 +54,7 @@ h1 ASP.NET library and image server
           |  
           img src="https://img.shields.io/badge/rendering engine-custom-green.svg"
         markdown: 
-          We expect a usable beta of [libimageflow and imageflow-server](https://www.imageflow.io) around September 2016, with a stable release the following year. [Imageflow](https://www.imageflow.io) makes a [cross-platform ImageResizer 5 possible](http://www.imageflow.io/imageresizer/). If you have [backed Imageflow on Kickstarter](https://www.kickstarter.com/projects/njones/imageflow-respect-the-pixels-a-secure-alt-to-image), you can already [access a limited command-line version of the tool](https://www.kickstarter.com/projects/njones/imageflow-respect-the-pixels-a-secure-alt-to-image/posts/1598662). 
+          We expect a usable beta of [libimageflow and imageflow-server](https://www.imageflow.io) around September 2016, with a stable release the following year. [Imageflow](https://www.imageflow.io) makes a [cross-platform ImageResizer 5 possible](http://www.imageflow.io/imageresizer/). If you [backed Imageflow on Kickstarter](https://www.kickstarter.com/projects/njones/imageflow-respect-the-pixels-a-secure-alt-to-image), you can already [access a limited command-line version of the tool](https://www.kickstarter.com/projects/njones/imageflow-respect-the-pixels-a-secure-alt-to-image/posts/1598662). 
 
       .span6 style="text-align:center;"
         p 
@@ -89,13 +89,7 @@ h1 ASP.NET library and image server
         p ImageResizer is the best image server for ASP.NET. It can be dropped into existing apps and works alongside your CMS or existing platform to eliminate manual image tasks, enable fast and adaptive websites, and improve your sales by reducing page load time. 
 
   
-  .container
-    .row-fluid
-      .span12 style="text-align:center;"
-          h2 style="color:black; font-style:bold;"
-            | Want an ImageResizer support contract? 
-            a href="mailto:support@imageresizing.net" 
-              | Email us by June 27th!
+
 hr style="margin:0; margin-top:5px; border-top: 1px solid #e3e3e3; border-bottom: 1px solid #e3e3e3;"
 .container-wrap
   .container
@@ -153,16 +147,14 @@ hr style="margin:0; margin-top:5px; border-top: 1px solid #e3e3e3; border-bottom
 
     .home3
       
-      a href="https://www.kickstarter.com/projects/njones/imageflow-respect-the-pixels-a-secure-alt-to-image" class="btn btn-buynow" style="margin:6px"
-        | Pre-order Imageflow now and save!
       a href="/download" class="btn btn-buynow" style="margin:6px"
         | Download ImageResizer for Windows Server
       markdown: 
-        Imageflow discounts will not be available after June 27th, when [the Imageflow Kickstarter ends](https://www.kickstarter.com/projects/njones/imageflow-respect-the-pixels-a-secure-alt-to-image).
-
         Read [more about ImageResizer vs Imageflow here](http://www.imageflow.io/imageresizer/).
 
-        Or [about ImageResizer support contracts (available through June 27th)](http://www.imageflow.io/imageresizer/).
+        Follow [Imageflow development on Github here](https://github.com/imazen/imageflow). 
+
+        
 
 
 
