Use HTTPS for loading font

--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -25,7 +25,7 @@ html(lang="en" class="no-js")
     /   link href="/css/twentytwenty.css" rel="stylesheet"
     / link href="/css/less/parallax-slider.css" rel="stylesheet"
 
-    link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Economica:700,400italic|Droid+Serif|Boogaloo|Source+Code+Pro:500'
+    link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700|Economica:700,400italic|Droid+Serif|Boogaloo|Source+Code+Pro:500'
 
     /[if IE 9]
       link href="/css/less/styleie9.css" rel="stylesheet"
