--- a/content/_layout/search.slim
+++ b/content/_layout/search.slim
@@ -1,7 +1,7 @@
 
 - if page.lib? "search"
 
-  script src="http://www.google.com/jsapi"
+  script src="https://www.google.com/jsapi"
 
   javascript:
     google.load('search', '1', {language : 'en', style : google.loader.themes.SHINY});
