--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -49,7 +49,7 @@ html(lang="en" class="no-js")
 
 
     /[if lt IE 9]
-      script src="http://html5shim.googlecode.com/svn/trunk/html5.js"
+      script src="https://html5shim.googlecode.com/svn/trunk/html5.js"
 
     == partial :analytics
   body
@@ -99,8 +99,6 @@ html(lang="en" class="no-js")
       - if page.lib?("bxSlider")
         script src="/js/jquery.bxSlider.min.js"
 
-      - if page.lib?("jtools")
-        script src="http://cdn.jquerytools.org/1.2.6/tiny/jquery.tools.min.js"
 
       - if page.lib?("tinybox")
         script src="/js/tinybox.js"
