--- a/content/benefits/agile.slim
+++ b/content/benefits/agile.slim
@@ -5,9 +5,9 @@ Aliases: /docs/benefits/agile
 h1 Single-source imaging and Agility
 
 h2 Eliminate duplication, eliminate human error
-img src="http://z.zr.io/rw/diagrams/agile-clutter.png"
+img src="https://z.zr.io/rw/diagrams/agile-clutter.png"
 i.icon-arrow-right style="font-size:36pt"
-img src="http://z.zr.io/rw/diagrams/agile-simple.png?width=338&height=286&scale=canvas&anchor=topleft"
+img src="https://z.zr.io/rw/diagrams/agile-simple.png?width=338&height=286&scale=canvas&anchor=topleft"
 
 .hero-unit
   p Single-source imaging is an essential strategy for companies who wish to reduce maintenance and increase agility.
