--- a/content/docs/v4/plugins/animatedgifs.slim
+++ b/content/docs/v4/plugins/animatedgifs.slim
@@ -31,8 +31,8 @@ h1 AnimatedGifs plugin
     br
     p
       .twentytwenty-container
-        img src="http://z.zr.io/rw/pluginexamples/example-animated.gif?format=jpeg&width=#{image_width}" id="plugin-example-before"
-        img src="http://z.zr.io/rw/pluginexamples/example-animated.gif?width=#{image_width}" id="plugin-example-after"
+        img src="https://z.zr.io/rw/pluginexamples/example-animated.gif?format=jpeg&width=#{image_width}" id="plugin-example-before"
+        img src="https://z.zr.io/rw/pluginexamples/example-animated.gif?width=#{image_width}" id="plugin-example-after"
 
     p 
       | Settings: width = 300
