--- a/content/download.slim
+++ b/content/download.slim
@@ -98,7 +98,7 @@ javascript:
   var google_conversion_color = "ffffff";
   var google_conversion_label = "HCaSCK3o3wEQ3aTy9gM";
   var google_conversion_value = 0;
-script type="text/javascript" src="http://www.googleadservices.com/pagead/conversion.js"
+script type="text/javascript" src="https://www.googleadservices.com/pagead/conversion.js"
 noscript
   div style="display:inline;"
     img height="1" width="1" style="border-style:none;" alt="" src="http://www.googleadservices.com/pagead/conversion/1054642781/?label=HCaSCK3o3wEQ3aTy9gM&amp;guid=ON&amp;script=0"
