--- a/content/staff.slim
+++ b/content/staff.slim
@@ -9,17 +9,7 @@ h1 Meet the Staff
   .title
     h2 Nathanael Jones
   .span8
-    h3 Code name: The Man with the Plan
     markdown:
-      Nathanael Jones is a software engineer, husband, consultant, and computer linguist with unreasonably high expectations of inanimate objects. He refines .NET, ruby, and javascript libraries full-time at Imazen, but can often be found on stack overflow or participating in W3C community groups.
+      Nathanael Jones is a software engineer, father, consultant, and computer linguist with unreasonably high expectations of inanimate objects. He refines Rust, .NET, Ruby, and Javascript libraries full-time at Imazen, but can often be found on stack overflow or participating in W3C community groups.
   .span4
-    img src="http://img.imageresizing.net/s3/resizer-images/ndj1.jpg?width=200"
-.row
-  .title
-    h2 Liz Certa
-  .span8
-    h3 Code name: The Spy
-    markdown:
-      Until very, *very* recently, Liz was a student of the English language on her way toward a life in academia. She is currently living in an alternate universe where she designs websites and answers IT questions instead. Liz dreads the day when her comic book writers merge the universes and she has to fight canon Liz. 
-  .span4
-    img src="http://img.imageresizing.net/s3/resizer-images/me-at-alices.jpg?width=200"
+    img src="https://z.zr.io/ri/ndj1.jpg?width=200"
