--- a/content/benefits/comprehensive.slim
+++ b/content/benefits/comprehensive.slim
@@ -15,31 +15,31 @@ h2 Transform
   .span4
     - w = widths(1.5,1,1,1).map{ |v| v + 4}
     h4 Scale with any fit mode
-    img src="http://z.zr.io/ri/2s.jpg?width=#{w[0]}"
+    img src="https://z.zr.io/ri/2s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/2s.jpg?width=#{w[1]}&height=#{w[1]}&mode=max"
+    img src="https://z.zr.io/ri/2s.jpg?width=#{w[1]}&height=#{w[1]}&mode=max"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/2s.jpg?width=#{w[2]}&height=#{w[2]}&mode=pad&bgcolor=eee"
+    img src="https://z.zr.io/ri/2s.jpg?width=#{w[2]}&height=#{w[2]}&mode=pad&bgcolor=eee"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/2s.jpg?width=#{w[3]}&height=#{w[3]}&mode=crop"
+    img src="https://z.zr.io/ri/2s.jpg?width=#{w[3]}&height=#{w[3]}&mode=crop"
     p Constrain, carve, pad, or crop to the perfect size with complete alignment control.
   .span4
     - w = widths(1,1,1)
     h4 Rotate & Flip
-    img src="http://z.zr.io/ri/3s.jpg?width=#{w[0]}"
+    img src="https://z.zr.io/ri/3s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/3s.jpg?width=#{w[1]}&srotate=90"
+    img src="https://z.zr.io/ri/3s.jpg?width=#{w[1]}&srotate=90"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/3s.jpg?width=#{(w[2] * 0.6).round}&rotate=30&flip=h"
+    img src="https://z.zr.io/ri/3s.jpg?width=#{(w[2] * 0.6).round}&rotate=30&flip=h"
     p Flip, rotate, or auto-rotate
   .span4
     - w = widths(1,1,1)
     h4 Modify canvas
-    img src="http://z.zr.io/ri/4s.jpg?width=#{w[0]}"
+    img src="https://z.zr.io/ri/4s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/4s.jpg?width=#{w[1] - 10}&margin=5&bgcolor=eee"
+    img src="https://z.zr.io/ri/4s.jpg?width=#{w[1] - 10}&margin=5&bgcolor=eee"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/4s.jpg?width=#{w[1] - 30}&paddingWidth=5&paddingColor=ccc&borderWidth=5&borderColor=ddd&margin=5&bgcolor=eee"
+    img src="https://z.zr.io/ri/4s.jpg?width=#{w[1] - 30}&paddingWidth=5&paddingColor=ccc&borderWidth=5&borderColor=ddd&margin=5&bgcolor=eee"
     p 
       | Add padding, borders, and margins 
       em within the image. 
@@ -48,30 +48,30 @@ h2 Transform
   .span4
     - w = widths(1,1)
     h4 Manual crop
-    img src="http://z.zr.io/ri/1s.jpg?width=#{w[0]}"
+    img src="https://z.zr.io/ri/1s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/1s.jpg?crop=18,26,60,70&cropxunits=100&cropyunits=100&width=#{w[1]}"
+    img src="https://z.zr.io/ri/1s.jpg?crop=18,26,60,70&cropxunits=100&cropyunits=100&width=#{w[1]}"
     p Crop by percent, pixels, or resolution-independent units (works seamlessly with jCrop).
 
   .span4
     - w = widths(1.5,1,1)
     h4 Auto-remove whitespace
-    img src="http://z.zr.io/ri/18s.jpg?width=#{w[0]}"
+    img src="https://z.zr.io/ri/18s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/18s.jpg?width=#{w[1]}&trim.threshold=33&trim.percentpadding=5"
+    img src="https://z.zr.io/ri/18s.jpg?width=#{w[1]}&trim.threshold=33&trim.percentpadding=5"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/18s.jpg?width=#{w[2]}&trim.threshold=80&trim.percentpadding=5"
+    img src="https://z.zr.io/ri/18s.jpg?width=#{w[2]}&trim.threshold=80&trim.percentpadding=5"
 
     p Product photos are painless with energy-based whitespace removal. 
 
   .span4
     - w = widths(1.3,1,1)
     h4 Face detection & auto-crop
-    img src="http://z.zr.io/ri/5s.jpg?width=#{w[0]}"
+    img src="https://z.zr.io/ri/5s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?width=#{w[1]}&height=#{w[1]}&mode=crop&c.focus=faces"
+    img src="https://z.zr.io/ri/5s.jpg?width=#{w[1]}&height=#{w[1]}&mode=crop&c.focus=faces"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?width=#{w[2]}&height=#{w[2]}&mode=crop&c.focus=faces&c.zoom=true"
+    img src="https://z.zr.io/ri/5s.jpg?width=#{w[2]}&height=#{w[2]}&mode=crop&c.focus=faces&c.zoom=true"
     p Provide focus points or use automatic face detection to ensure everyone stays in the photo.
 hr
 h2 Enhance
@@ -82,7 +82,7 @@ h2 Enhance
       - ["","&a.balancewhite=true"].each_with_index do |q,ix|
         - if ix > 0
           i.icon-arrow-right
-        img src="http://z.zr.io/ri/fix/#{n}s.jpg?width=#{normal_width(2)}#{q}"
+        img src="https://z.zr.io/ri/fix/#{n}s.jpg?width=#{normal_width(2)}#{q}"
       br
   .span4
     h4 Auto Histogram Equalization
@@ -90,7 +90,7 @@ h2 Enhance
       - ["", "&a.equalize=true"].each_with_index do |q,ix|
         - if ix > 0
           i.icon-arrow-right
-        img src="http://z.zr.io/ri/fix/#{n}s.jpg?width=#{normal_width(2)}#{q}"
+        img src="https://z.zr.io/ri/fix/#{n}s.jpg?width=#{normal_width(2)}#{q}"
       br
   .span4
     h4 +50% contrast
@@ -98,7 +98,7 @@ h2 Enhance
       - ["", "&s.contrast=0.5"].each_with_index do |q,ix|
         - if ix > 0
           i.icon-arrow-right
-        img src="http://z.zr.io/ri/fix/#{n}s.jpg?width=#{normal_width(2)}#{q}"
+        img src="https://z.zr.io/ri/fix/#{n}s.jpg?width=#{normal_width(2)}#{q}"
       br
 .row
   .span4
@@ -107,7 +107,7 @@ h2 Enhance
       - ["","&a.sharpen=20&quality=100"].each_with_index do |q,ix|
         - if ix > 0
           i.icon-arrow-right
-        img src="http://z.zr.io/ri/fix/#{n}s.jpg?width=#{normal_width(2)}#{q}"
+        img src="https://z.zr.io/ri/fix/#{n}s.jpg?width=#{normal_width(2)}#{q}"
       br
   .span4
     h4 +50% saturation
@@ -115,7 +115,7 @@ h2 Enhance
       - ["", "&s.saturation=0.5"].each_with_index do |q,ix|
         - if ix > 0
           i.icon-arrow-right
-        img src="http://z.zr.io/ri/fix/#{n}s.jpg?width=#{normal_width(2)}#{q}"
+        img src="https://z.zr.io/ri/fix/#{n}s.jpg?width=#{normal_width(2)}#{q}"
       br
   .span4
     h4 +15% exposure
@@ -123,7 +123,7 @@ h2 Enhance
       - ["", "&s.brightness=0.15"].each_with_index do |q,ix|
         - if ix > 0
           i.icon-arrow-right
-        img src="http://z.zr.io/ri/fix/#{n}s.jpg?width=#{normal_width(2)}#{q}"
+        img src="https://z.zr.io/ri/fix/#{n}s.jpg?width=#{normal_width(2)}#{q}"
       br
 
 hr
@@ -135,100 +135,100 @@ h2 Filter
   - w = widths(1,1,1)
   .span4
     h4 Grayscale fixes everything
-    img src="http://z.zr.io/ri/utah2.jpg?width=#{w[0]}"
+    img src="https://z.zr.io/ri/utah2.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/utah2.jpg?width=#{w[1]}&s.grayscale=true"
+    img src="https://z.zr.io/ri/utah2.jpg?width=#{w[1]}&s.grayscale=true"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/utah2.jpg?width=#{w[2]}&s.grayscale=ry"
+    img src="https://z.zr.io/ri/utah2.jpg?width=#{w[2]}&s.grayscale=ry"
     br
-    img src="http://z.zr.io/ri/utah2.jpg?width=#{w[0]}"
+    img src="https://z.zr.io/ri/utah2.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/utah2.jpg?width=#{w[1]}&s.grayscale=bt709"
+    img src="https://z.zr.io/ri/utah2.jpg?width=#{w[1]}&s.grayscale=bt709"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/utah2.jpg?width=#{w[2]}&s.grayscale=flat"
+    img src="https://z.zr.io/ri/utah2.jpg?width=#{w[2]}&s.grayscale=flat"
   .span4
     h4 Sepia, Warming and Cooling Filters
-    img src="http://z.zr.io/ri/5s.jpg?width=#{w[0]}&s.sepia=true"
+    img src="https://z.zr.io/ri/5s.jpg?width=#{w[0]}&s.sepia=true"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?width=#{w[1]}&s.overlay=AC7A3320"
+    img src="https://z.zr.io/ri/5s.jpg?width=#{w[1]}&s.overlay=AC7A3320"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?width=#{w[2]}&s.shift=AC7A3320"
+    img src="https://z.zr.io/ri/5s.jpg?width=#{w[2]}&s.shift=AC7A3320"
     br
-    img src="http://z.zr.io/ri/5s.jpg?width=#{w[0]}"
+    img src="https://z.zr.io/ri/5s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?width=#{w[1]}&s.shift=EC8A0020"
+    img src="https://z.zr.io/ri/5s.jpg?width=#{w[1]}&s.shift=EC8A0020"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?width=#{w[2]}&s.shift=EBB11320"
+    img src="https://z.zr.io/ri/5s.jpg?width=#{w[2]}&s.shift=EBB11320"
     br
-    img src="http://z.zr.io/ri/5s.jpg?width=#{w[0]}"
+    img src="https://z.zr.io/ri/5s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?width=#{w[1]}&s.shift=005DFF20"
+    img src="https://z.zr.io/ri/5s.jpg?width=#{w[1]}&s.shift=005DFF20"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?width=#{w[2]}&s.shift=00C1B120"
+    img src="https://z.zr.io/ri/5s.jpg?width=#{w[2]}&s.shift=00C1B120"
 
   .span4
     h4 Paint, posterize, and blur 
-    img src="http://z.zr.io/ri/fix/2s.jpg?width=#{w[0]}&a.oilpainting=0"
+    img src="https://z.zr.io/ri/fix/2s.jpg?width=#{w[0]}&a.oilpainting=0"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/fix/2s.jpg?width=#{w[1]}&a.oilpainting=15"
+    img src="https://z.zr.io/ri/fix/2s.jpg?width=#{w[1]}&a.oilpainting=15"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/fix/2s.jpg?width=#{w[2]}&a.oilpainting=30"
+    img src="https://z.zr.io/ri/fix/2s.jpg?width=#{w[2]}&a.oilpainting=30"
     br
-    img src="http://z.zr.io/ri/fix/26s.jpg?width=#{w[0]}"
+    img src="https://z.zr.io/ri/fix/26s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/fix/26s.jpg?width=#{w[1]}&a.posterize=64"
+    img src="https://z.zr.io/ri/fix/26s.jpg?width=#{w[1]}&a.posterize=64"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/fix/26s.jpg?width=#{w[2]}&a.posterize=128"
+    img src="https://z.zr.io/ri/fix/26s.jpg?width=#{w[2]}&a.posterize=128"
     br
-    img src="http://z.zr.io/ri/5s.jpg?width=#{w[0]}&a.blur=0"
+    img src="https://z.zr.io/ri/5s.jpg?width=#{w[0]}&a.blur=0"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?width=#{w[1]}&a.blur=5"
+    img src="https://z.zr.io/ri/5s.jpg?width=#{w[1]}&a.blur=5"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?width=#{w[2]}&a.blur=15"
+    img src="https://z.zr.io/ri/5s.jpg?width=#{w[2]}&a.blur=15"
 .row
   .span4
     - w = widths(1,1,1,1,0.5)
     h4 Round corners
-    img src="http://z.zr.io/ri/14s.jpg?width=#{w[0]}"
+    img src="https://z.zr.io/ri/14s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/14s.jpg?width=#{w[1]}&s.roundcorners=100,0,100,0"
+    img src="https://z.zr.io/ri/14s.jpg?width=#{w[1]}&s.roundcorners=100,0,100,0"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/14s.jpg?width=#{w[2]}&s.roundcorners=40"
+    img src="https://z.zr.io/ri/14s.jpg?width=#{w[2]}&s.roundcorners=40"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/14s.jpg?width=#{w[3]}&s.roundcorners=100"
+    img src="https://z.zr.io/ri/14s.jpg?width=#{w[3]}&s.roundcorners=100"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/14s.jpg?width=#{w[4]}&height=#{w[4]}&mode=crop&s.roundcorners=100"
+    img src="https://z.zr.io/ri/14s.jpg?width=#{w[4]}&height=#{w[4]}&mode=crop&s.roundcorners=100"
   .span4
     - w = widths(1,1,1,1)
     h4 Feather edges
-    img src="http://z.zr.io/ri/12s.jpg?width=#{w[0]}"
+    img src="https://z.zr.io/ri/12s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/12s.jpg?width=#{w[1]}&a.featheredges=200&a.featherout=0.2&bgcolor=black" 
+    img src="https://z.zr.io/ri/12s.jpg?width=#{w[1]}&a.featheredges=200&a.featherout=0.2&bgcolor=black" 
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/12s.jpg?width=#{w[2]}&a.featheredges=200&bgcolor=black" 
+    img src="https://z.zr.io/ri/12s.jpg?width=#{w[2]}&a.featheredges=200&bgcolor=black" 
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/12s.jpg?width=#{w[3]}&a.featheredges=200&bgcolor=white" 
+    img src="https://z.zr.io/ri/12s.jpg?width=#{w[3]}&a.featheredges=200&bgcolor=white" 
   .span4
     - w = widths(1,1,1)
     h4 Make JPEGs transparent
-    img src="http://z.zr.io/ri/5s.jpg?width=#{w[0]}"
+    img src="https://z.zr.io/ri/5s.jpg?width=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?width=#{w[1]}&s.alpha=0.8&format=png"
+    img src="https://z.zr.io/ri/5s.jpg?width=#{w[1]}&s.alpha=0.8&format=png"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/5s.jpg?width=#{w[2]}&s.alpha=0.6&format=png"
+    img src="https://z.zr.io/ri/5s.jpg?width=#{w[2]}&s.alpha=0.6&format=png"
 hr
 h2 Advanced
 .row
   .span4
     - w = widths(1,1)
     h4 Face & Eye detection
-    img src="http://z.zr.io/ri/2s.jpg?width=#{w[0]}&f.show=true"
+    img src="https://z.zr.io/ri/2s.jpg?width=#{w[0]}&f.show=true"
     span.imagespacer
-    img src="http://z.zr.io/ri/5s.jpg?width=#{w[1]}&r.autoeyes=true"
+    img src="https://z.zr.io/ri/5s.jpg?width=#{w[1]}&r.autoeyes=true"
   .span4
     - w = widths(1)
     h4 Red-eye repair
-    img src="http://z.zr.io/ri/5s.jpg?width=#{w[0]}&r.autoeyes=true"
+    img src="https://z.zr.io/ri/5s.jpg?width=#{w[0]}&r.autoeyes=true"
     p Our adaptive circle fill algorithm repairs red-eye while maintaining integrity.
   .span4
     h4 Encode & Compress
@@ -244,22 +244,22 @@ h2 Advanced
   .span4
     - w = widths(1,1,1,1)
     h4 Apply overlays and backgrounds
-    img src="http://z.zr.io/ri/23s.jpg?width=#{w[0]}&watermark=logo"
+    img src="https://z.zr.io/ri/23s.jpg?width=#{w[0]}&watermark=logo"
     span.imagespacer
-    img src="http://z.zr.io/ri/23s.jpg?width=#{w[1]}&watermark=bg&s.alpha=0.7&s.roundcorners=100"
+    img src="https://z.zr.io/ri/23s.jpg?width=#{w[1]}&watermark=bg&s.alpha=0.7&s.roundcorners=100"
     span.imagespacer
-    img src="http://z.zr.io/ri/23s.jpg?width=#{w[2]}&watermark=fill-text1&s.alpha=.5&text=hi"
+    img src="https://z.zr.io/ri/23s.jpg?width=#{w[2]}&watermark=fill-text1&s.alpha=.5&text=hi"
     span.imagespacer
-    img src="http://z.zr.io/ri/23s.jpg?width=#{w[3]}&watermark=fill-text1&s.alpha=.5&text=We have flexible layout"
+    img src="https://z.zr.io/ri/23s.jpg?width=#{w[3]}&watermark=fill-text1&s.alpha=.5&text=We have flexible layout"
     p Overlay (or underlay) an unlimited number of text and image layers; exercise complete layout control.
   .span4
     - w = widths(0.5,1,1)
     h4 Upscale on your terms
-    img src="http://z.zr.io/ri/15tiny.jpg?width=#{w[0]}&height=#{w[0]}"
+    img src="https://z.zr.io/ri/15tiny.jpg?width=#{w[0]}&height=#{w[0]}"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/15tiny.jpg?width=#{w[1]}&height=#{w[1]}&scale=canvas&bgcolor=ddd"
+    img src="https://z.zr.io/ri/15tiny.jpg?width=#{w[1]}&height=#{w[1]}&scale=canvas&bgcolor=ddd"
     i.icon-arrow-right
-    img src="http://z.zr.io/ri/15tiny.jpg?width=#{w[2]}&height=#{w[2]}&scale=both&bgcolor=ddd&fi.scale=lanczos"
+    img src="https://z.zr.io/ri/15tiny.jpg?width=#{w[2]}&height=#{w[2]}&scale=both&bgcolor=ddd&fi.scale=lanczos"
     p Upscale only when you want to, the way you want to, with the upscale filter you want.
 
   .span3
