--- a/content/index.slim
+++ b/content/index.slim
@@ -137,7 +137,7 @@ hr style="margin:0; margin-top:5px; border-top: 1px solid #e3e3e3; border-bottom
         .span6.home-image-bg
           .home-image-box
             .home-image-inner
-              img.change-this-image src="http://z.zr.io/ri/u3.jpg?height=200"
+              img.change-this-image src="https://z.zr.io/ri/u3.jpg?height=200"
        
     h2.leftzero
         | Add commands to image URLs to get altered versions in milliseconds. 
@@ -264,25 +264,25 @@ hr
     .row
       .span3
         a.block.plaintext.color href="/benefits/customers"
-          img src="http://img.imageresizing.net/s3/resizer-web/sampleimages/in-the-field.jpg?width=250"
+          img src="https://z.zr.io/rw/sampleimages/in-the-field.jpg?width=250"
           h3 In the Field
           p
             |Our clients never cease to amaze us with the creative uses they have found for ImageResizer. Check out some of our customers' homepages and see for yourself.
       .span3
         a.block.plaintext.color href="/docs/tutorials"
-          img src="http://img.imageresizing.net/s3/resizer-web/sampleimages/tutorials2.png?width=250"
+          img src="https://z.zr.io/rw/sampleimages/tutorials2.png?width=250"
             h3 Tutorials
             p
               |Either watch a screencast or read a page to see ImageResizer in action.
       .span3
         a.block.plaintext.color href="/benefits/testimonials"
-          img src="http://img.imageresizing.net/s3/resizer-web/sampleimages/testimonials.png?width=250"
+          img src="https://z.zr.io/rw/sampleimages/testimonials.png?width=250"
             h3 Testimonials
             p
               |We don't like to toot our own horn. Fortunately, we have plenty of customers who'll do it for us. See what they're saying.
       .span3
         a.block.plaintext.color href="/docs/community"
-          img src="http://img.imageresizing.net/s3/resizer-web/sampleimages/cropped-community.jpg?width=250"
+          img src="https://z.zr.io/rw/sampleimages/cropped-community.jpg?width=250"
             h3 Community
             p
               |We never stop working to make ImageResizer better, but we get a lot of help. Check out some of the work our awesome, dedicated, and expansive community has made.
