--- a/content/download.slim
+++ b/content/download.slim
@@ -3,6 +3,8 @@ title: Download the Image Resizer Free
 Libs: -comments, plusone
 Icon: download-alt
 textclass: none
+conversion_id: 1054642781
+conversion_label: HCaSCK3o3wEQ3aTy9gM
 
 
 h1 Download ImageResizer
@@ -89,16 +91,3 @@ h1 Download ImageResizer
       |  &nbsp; 
       button type="submit" name="Submit" class="btn btn-primary" style="margin-bottom:10px"
        | Subscribe (avg 4 per year) &raquo;
-
-/ Google Code for View download page Conversion Page
-javascript:
-  var google_conversion_id = 1054642781;
-  var google_conversion_language = "en";
-  var google_conversion_format = "3";
-  var google_conversion_color = "ffffff";
-  var google_conversion_label = "HCaSCK3o3wEQ3aTy9gM";
-  var google_conversion_value = 0;
-script type="text/javascript" src="https://www.googleadservices.com/pagead/conversion.js"
-noscript
-  div style="display:inline;"
-    img height="1" width="1" style="border-style:none;" alt="" src="http://www.googleadservices.com/pagead/conversion/1054642781/?label=HCaSCK3o3wEQ3aTy9gM&amp;guid=ON&amp;script=0"
