make shields CSS; add preload headers

--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -45,9 +45,23 @@ html(lang="en" class="no-js")
 
     link href="/atom.xml" rel="alternate" type="application/atom+xml"
     
+    link rel="preload" href="/img/ir-logos/imageresizer_400_00aec4.png" as="image"
+    link rel="preload" href="/images/imageflow.svg" as="image"
     link rel="preload" href="/css/fonts/fontawesome-webfont.woff?v=3.0.1" as="font"
     link rel="preload" href="/img/icons/list/blue/list_arrow.png" as="image"
+    link rel="preload" href="/img/icons/list/blue/list_star.png" as="image"
+    link rel="preload" href="/img/icons/glyphicons-white.png" as="image"
+    link rel="preload" href="/img/bg-k20.png" as="image"
+    link rel="preload" href="/img/bg-k10.png" as="image"
+    link rel="preload" href="/img/scroll-top-top.png" as="image"
+    link rel="preload" href="/img/icons/social/googleplus.png" as="image"
+    link rel="preload" href="/img/icons/social/twitter.png" as="image"
+    link rel="preload" href="/img/icons/social/facebook.png" as="image"
+    link rel="preload" href="/img/icons/social/linkedin.png" as="image"
+    link rel="preload" href="/img/icons/social/stumbleupon.png" as="image"
     link rel="preload" href="/img/ir-logos/imageresizer-logo-gray-160.png" as="image"
+    link rel="preload" href="https://fonts.gstatic.com/s/roboto/v15/oMMgfZMQthOryQo9n22dcuvvDin1pK8aKteLpeZ5c0A.woff2" as="font"
+    
     /[if lt IE 9]
       script src="https://html5shim.googlecode.com/svn/trunk/html5.js"
 
