--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -5,6 +5,39 @@
  .savetrees { display: none !important; } 
 }
 
+.shield{
+    white-space: no-wrap;
+    display: inline-block;
+    color:#fff;
+    font-family: DejaVu Sans,Verdana,Geneva,sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+    font-size:11px;
+    text-decoration:none;
+    margin: 1px 0 1px 0;
+    -webkit-font-smoothing: subpixel-antialiased;
+
+}
+.shield.gap{
+  margin-right:5px;
+}
+.shield_k {
+  display:inline-block;
+  padding: 3px 4px 4px 6px;
+  border-radius:3px 0 0 3px;
+  background-color: #555;
+  background: linear-gradient(to bottom, rgba(95,95,95,1) 0%, rgba(76,76,76,1) 100%);
+  text-shadow:0px 1px 0px rgba(01,01,01,0.15);
+} 
+.shield_v {
+  display:inline-block;
+  padding: 3px 6px 4px 4px;
+  border-radius:0 3px 3px 0;
+  background-color:#97CA00;
+  background:linear-gradient(to bottom, rgba(154,200,0,1) 0%, rgba(135,181,0,1) 100%);
+  text-shadow:0px 1px 0px rgba(1, 80, 1, 0.35);
+}
 
 .legal table{
   width: 100%;
