--- a/content/index.slim
+++ b/content/index.slim
@@ -24,18 +24,50 @@ h1 ASP.NET library and image server
           a href="https://www.imageflow.io"
             img src="https://www.imageflow.io/images/imageflow.svg" alt="Imageflow" width="200"
         p
-
-
+          span.shield.gap
+            span.shield_k status
+            span.shield_v in development
+          span.shield.gap
+            span.shield_k OS
+            span.shield_v Windows, Linux, Mac
+          span.shield.gap
+            span.shield_k embeddable by
+            span.shield_v all C compatible languages
+          span.shield.gap
+            span.shield_k REST APIs
+            span.shield_v JSON API, Querystring API
+          span.shield.gap
+            span.shield_k web server
+            span.shield_v built-in
+          span.shield.gap
+            span.shield_k codecs
+            span.shield_v OSS+custom
+          span.shield.gap
+            span.shield_k file sizes
+            span.shield_v world-class
+          span.shield.gap
+            span.shield_k performance
+            span.shield_v unparalleled
+          span.shield.gap
+            span.shield_k color profiles
+            span.shield_v correct
+          span.shield.gap
+            span.shield_k built with
+            span.shield_v Rust, C11, C++
+          span.shield.gap
+            span.shield_k components
+            span.shield_v separate libimageflow.dll, imageflow_server.exe-green
+          span.shield.gap
+            span.shield_k rendering engine
+            span.shield_v custom
+        /
           img src="https://img.shields.io/badge/status-in%20development-green.svg"
           |  
           img src="https://img.shields.io/badge/OS-Windows, Linux, Mac-green.svg"
           |  
           img src="https://img.shields.io/badge/embeddable by-all C compatible languages-green.svg"
           |  
-          img src="https://img.shields.io/badge/official bindings-C%23%2fNode%2fRuby%2fRust and .NET Core-green.svg"
-          |  
           img src="https://img.shields.io/badge/REST APIs-JSON API, Querystring API-green.svg"
-        
           |  
           img src="https://img.shields.io/badge/web server-built%20in-green.svg"
           |  
@@ -60,14 +92,49 @@ h1 ASP.NET library and image server
         p 
           img src="/img/ir-logos/imageresizer_00AEC4_transparent.svg" alt="Imageresizer" width="200"
         p
+          span.shield.gap
+            span.shield_k status
+            span.shield_v highly stable
+          span.shield.gap
+            span.shield_k OS
+            span.shield_v Windows Server
+          span.shield.gap
+            span.shield_k embeddable by
+            span.shield_v C#/F#/VB.NET except .NET Core
+          span.shield.gap
+            span.shield_k REST APIs
+            span.shield_v Querystring API
+          span.shield.gap
+            span.shield_k web server
+            span.shield_v IIS
+          span.shield.gap
+            span.shield_k codecs
+            span.shield_v Windows APIs
+          span.shield.gap
+            span.shield_k file sizes
+            span.shield_v decent
+          span.shield.gap
+            span.shield_k performance
+            span.shield_v good
+          span.shield.gap
+            span.shield_k color profiles
+            span.shield_v limited by windows
+          span.shield.gap
+            span.shield_k built with
+            span.shield_v C#, F#, C++/CLI, C89
+          span.shield.gap
+            span.shield_k components
+            span.shield_v combined server, client, and library
+          span.shield.gap
+            span.shield_k rendering engine
+            span.shield_v GDI+ (free) / custom (with Performance license)
+        /
           
           img src="https://img.shields.io/badge/status-highly%20stable-green.svg"
           |  
           img src="https://img.shields.io/badge/OS-Windows%20Server-green.svg"
           |   
           img src="https://img.shields.io/badge/embeddable by-C%23%2FF%23%2FVB.NET except .NET Core-green.svg"
-          |  
-          img src="https://img.shields.io/badge/bindings-C%23-green.svg"
           |  
           img src="https://img.shields.io/badge/REST APIs-Querystring API-green.svg"
           |  
