move 2 images local; switch to delay-loaded youtube player

--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -61,7 +61,7 @@ html(lang="en" class="no-js")
     link rel="preload" href="/img/icons/social/stumbleupon.png" as="image"
     link rel="preload" href="/img/ir-logos/imageresizer-logo-gray-160.png" as="image"
     link rel="preload" href="https://fonts.gstatic.com/s/roboto/v15/oMMgfZMQthOryQo9n22dcuvvDin1pK8aKteLpeZ5c0A.woff2" as="font"
-    
+    link rel="preload" href="/img/play_video.png" as="image"
     /[if lt IE 9]
       script src="https://html5shim.googlecode.com/svn/trunk/html5.js"
 
