--- a/content/index.slim
+++ b/content/index.slim
@@ -22,7 +22,7 @@ h1 ASP.NET library and image server
         
         p
           a href="https://www.imageflow.io"
-            img src="https://www.imageflow.io/images/imageflow.svg" alt="Imageflow" width="200"
+            img src="/img/imageflow.svg" alt="Imageflow" width="200"
         p
           span.shield.gap
             span.shield_k status
@@ -268,9 +268,10 @@ hr style="margin:0; margin-top:5px; border-top: 1px solid #e3e3e3; border-bottom
   h1.home3 style="padding-top: 25px; padding-bottom: 30px"
     |Create images that impress and inspire
   .container
-    .span3.home3.hide_video
-      iframe height="252" width="400"src="//www.youtube.com/embed/GEA3uduWylk?rel=0"
-    .span3
+    .span6.home3.hide_video
+      .youtube-player data-id="GEA3uduWylk"
+      /
+        iframe height="252" width="400"src="//www.youtube.com/embed/GEA3uduWylk?rel=0"
     .span6
       p style= "margin-left: 60px; margin-right:30px"
         |ImageResizer provides a comprehensive set of photography tools, from powerfully simple one-command adjustments, such as white balance correction and noise removal, to cutting-edge advanced controls, such as red-eye correction, object removal, and seam carving. Have your server deliver final images to the browser in milliseconds.
