fix 404 imaegflow.svg. use https for demo images

--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -46,7 +46,7 @@ html(lang="en" class="no-js")
     link href="/atom.xml" rel="alternate" type="application/atom+xml"
     
     link rel="preload" href="/img/ir-logos/imageresizer_400_00aec4.png" as="image"
-    link rel="preload" href="/images/imageflow.svg" as="image"
+    link rel="preload" href="/img/imageflow.svg" as="image"
     link rel="preload" href="/css/fonts/fontawesome-webfont.woff?v=3.0.1" as="font"
     link rel="preload" href="/img/icons/list/blue/list_arrow.png" as="image"
     link rel="preload" href="/img/icons/list/blue/list_star.png" as="image"
